# python-project-52

./: .gitignore  Makefile  README.md  build.sh  conftest.py  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pyci.yml
task_manager/: __init__.py  filters.py  misc_views.py  mixins.py  settings.py  urls.py
task_manager/labels/: forms.py  label_views.py  test_labels.py  tests.py  urls.py  views.py
task_manager/main/: urls.py  views.py
task_manager/migrations/: 0002_label_task_labels.py
task_manager/statuses/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: apps.py  forms.py  models.py  task_views.py  test_tasks.py  tests.py  urls.py  views.py
task_manager/templates/: index.html  label_form.html  login.html  status_list.html  task_confirm_delete.html  task_list.html
task_manager/users/: admin.py  forms.py  models.py  test_users.py  tests.py  urls.py  utils.py  views.py
task_manager_app/: filters.py  forms.py  models.py  urls.py  view.py  views.py
task_manager_app/migrations/: 0001_initial.py
task_manager_app/tests/: test_statuses.py
task_manager_app/views/: __init__.py  status_views.py  user_views.py
templates/: base.html  footer.html  form.html  index.html  label_list.html  navbar.html  status_form.html  task_form.html  user_form.html
templates/labels/: delete.html  label_confirm_delete.html  label_list.html  labels.html
templates/main/: login.html  main.html
templates/statuses/: delete.html  status_list.html
templates/task_manager_app/: base.html  index.html  login.html  status_confirm_delete.html  status_form.html  (+5 more)
tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py
(+29 files in other folders)
