[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-cov==6.1.1",
    "pyyaml==6.0.2",
    "python-dotenv==1.2.1",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.11",
    "validators",
    "requests==2.31",
    "beautifulsoup4",
    "rollbar==1.3.0",
    "asgiref==3.11.0",
    "dj-database-url==3.1.0",
    "django==6.0.1",
    "packaging==25.0",
    "sqlparse==0.5.5",
    "django-bootstrap5==26.1",
    "django-filter==25.2",
    "pytest-django==4.11.1",
    "django-widget-tweaks==1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
